# High-Powered-Rocketry-Modeling

./: .gitignore  Cargo.toml  README.md  compile.ps1  compile.sh  getting-started  hprm.pyi  pyproject.toml  roadmap.md
.github/workflows/: python-tests.yml  release.yml  rust-clippy.yml  rust-unit-tests.yml
examples/: adaptive_timestep_demo.py  adaptivets_demo.py  apogee_pred.py  compare_methods.py  compare_rocket_params.py  demo.py  plotly_3dof_rk45_demo.py  predict_apogee.py  rk45_3dof_plotly.py  simulate_flight.py
examples/fitdata/: fit1dof.py
hprm/: .demo.py.swp  Cargo.toml  demo.py  pyproject.toml
hprm/.env/: pyvenv.cfg
hprm/src/: example_lib.rs  lib.rs  physics_mod.rs  plotting.rs  rocket_mod.rs  simdata_mod.rs  simulation.rs  simulation_mod.rs  state.rs
hprm/src/math/: ode.rs
hprm/src/state/: model_1dof.rs  state_vector.rs
rocket_sim/: Cargo.toml
rocket_sim/src/: plotting.rs
rocket_sim_rust/src/: main.rs  rocket_mod.rs
rocket_sim_rust/src/state/: model_3dof.rs
rocket_sim_rust_old_standalone/src/: simdata_mod.rs  simulation_mod.rs
rocket_sim_rust_old_standalone/src/math/: ode.rs
rocket_sim_rust_old_standalone/src/state/: model_1dof.rs  model_6dof.rs
scripts/: check_benchmarks.py
src/: constants.rs  lib.rs  main.rs  math.rs  math_mod.rs  math_module.rs  ode.rs  physics_mod.rs  physics_module.rs  rocket.rs  rocket_mod.rs  simdata_mod.rs  simulation.rs  simulation_mod.rs  state.rs  state_mod.rs  state_module.rs
src/math/: ode.rs  vec_ops.rs
src/state/: model_1dof.rs  model_3dof.rs  model_6dof.rs  state_vector.rs
testd/: Cargo.toml  pyproject.toml
testd/.env/: pyvenv.cfg
testd/src/: lib.rs  state.rs
testd/src/math/: vec_ops.rs
tests/: test_benchmarks.py  test_integration.py  test_simulation_integration.py
