[package]
name = "hprm"
version = "0.1.1"
edition = "2021"

[lib]
name = "hprm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "gil-refs"] } 

# Ensure numpy is compatible with the pyo3 version you are using
numpy = "0.27.0"
nalgebra = "0.34.1"

[lints.rust]
unused_imports = "allow"