[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "hprm"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# maturin will pull version dynamically from Cargo.toml if needed
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "maturin>=1.8,<2.0",
    "pytest",
]

examples = [
    "numpy",
    "matplotlib",
]

[tool.maturin]
# Enables PyO3 extension-module build
features = ["pyo3/extension-module"]

[tool.uv]
package = false
