[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "hprm"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# maturin will pull version dynamically from Cargo.toml if needed
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "maturin>=1.8,<2.0",
    "pytest",
]

examples = [
    "numpy",
    "matplotlib",
]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]
config-settings = { build-args = "--profile=dev" }